--- a/Ottawa_collision/notebooks/04-SMOTE-resampling.ipynb
+++ b/Ottawa_collision/notebooks/04-SMOTE-resampling.ipynb
@@ -6,9 +6,9 @@
    "source": [
     "# Resampling Techniques\n",
     "\n",
-    "## 1.  Synthetic Minority Over Sampling Technique (SMOTE)\n",
+    "1.  Synthetic Minority Over Sampling Technique (SMOTE)\n",
     "\n",
-    "## 2. UnderSampling"
+    "2. UnderSampling"
    ]
   },
   {
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -181,6 +181,25 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <td>2</td>\n",
+       "      <td>3</td>\n",
+       "      <td>LOGGERS WAY btwn KINGDON MINE RD &amp; GALETTA SID...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>5.033218e+06</td>\n",
+       "      <td>2014-06-20</td>\n",
+       "      <td>23:15:00</td>\n",
+       "      <td>01 - Clear</td>\n",
+       "      <td>01 - Dry</td>\n",
+       "      <td>10 - No control</td>\n",
+       "      <td>01 - Non intersection</td>\n",
+       "      <td>07 - Dark</td>\n",
+       "      <td>01 - Fatal injury</td>\n",
+       "      <td>07 - SMV other</td>\n",
+       "      <td>2014</td>\n",
+       "      <td>June</td>\n",
+       "      <td>Friday</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>3</td>\n",
        "      <td>4</td>\n",
        "      <td>MONTREAL RD @ BATHGATE DR/BURMA RD</td>\n",
        "      <td>373224.24847</td>\n",
@@ -199,7 +218,7 @@
        "      <td>Tuesday</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>3</td>\n",
+       "      <td>4</td>\n",
        "      <td>5</td>\n",
        "      <td>RICHMOND RD btwn FALLOWFIELD RD &amp; RUSHMORE RD</td>\n",
        "      <td>358156.20481</td>\n",
@@ -217,67 +236,41 @@
        "      <td>August</td>\n",
        "      <td>Tuesday</td>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <td>4</td>\n",
-       "      <td>6</td>\n",
-       "      <td>PARKDALE AVE btwn RUSKIN ST &amp; INGLEWOOD PL</td>\n",
-       "      <td>365558.54334</td>\n",
-       "      <td>5.028338e+06</td>\n",
-       "      <td>2014-04-19</td>\n",
-       "      <td>10:22:00</td>\n",
-       "      <td>01 - Clear</td>\n",
-       "      <td>01 - Dry</td>\n",
-       "      <td>10 - No control</td>\n",
-       "      <td>01 - Non intersection</td>\n",
-       "      <td>01 - Daylight</td>\n",
-       "      <td>01 - Fatal injury</td>\n",
-       "      <td>06 - SMV unattended vehicle</td>\n",
-       "      <td>2014</td>\n",
-       "      <td>April</td>\n",
-       "      <td>Saturday</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   Record                                       Location             X  \\\n",
-       "0       1                          RIDEAU ST @ WALLER ST  368282.69327   \n",
-       "1       2       HINES RD btwn INNOVATION DR & SOLANDT RD  350172.08885   \n",
-       "2       4             MONTREAL RD @ BATHGATE DR/BURMA RD  373224.24847   \n",
-       "3       5  RICHMOND RD btwn FALLOWFIELD RD & RUSHMORE RD  358156.20481   \n",
-       "4       6     PARKDALE AVE btwn RUSKIN ST & INGLEWOOD PL  365558.54334   \n",
+       "   Record                                           Location             X  \\\n",
+       "0       1                              RIDEAU ST @ WALLER ST  368282.69327   \n",
+       "1       2           HINES RD btwn INNOVATION DR & SOLANDT RD  350172.08885   \n",
+       "2       3  LOGGERS WAY btwn KINGDON MINE RD & GALETTA SID...           NaN   \n",
+       "3       4                 MONTREAL RD @ BATHGATE DR/BURMA RD  373224.24847   \n",
+       "4       5      RICHMOND RD btwn FALLOWFIELD RD & RUSHMORE RD  358156.20481   \n",
        "\n",
        "              Y        Date      Time Environment Road_Surface  \\\n",
        "0  5.032275e+06  2014-02-21  06:07:00   02 - Rain     02 - Wet   \n",
        "1  5.022740e+06  2014-08-02  13:55:00  01 - Clear     01 - Dry   \n",
-       "2  5.034518e+06  2014-07-29  16:31:00  01 - Clear     01 - Dry   \n",
-       "3  5.012570e+06  2014-08-05  20:05:00  01 - Clear     01 - Dry   \n",
-       "4  5.028338e+06  2014-04-19  10:22:00  01 - Clear     01 - Dry   \n",
+       "2  5.033218e+06  2014-06-20  23:15:00  01 - Clear     01 - Dry   \n",
+       "3  5.034518e+06  2014-07-29  16:31:00  01 - Clear     01 - Dry   \n",
+       "4  5.012570e+06  2014-08-05  20:05:00  01 - Clear     01 - Dry   \n",
        "\n",
        "       Traffic_Control          Collision_Location          Light  \\\n",
        "0  01 - Traffic signal        03 - At intersection      07 - Dark   \n",
        "1      10 - No control  04 - At/near private drive  01 - Daylight   \n",
-       "2  01 - Traffic signal        03 - At intersection  01 - Daylight   \n",
-       "3      10 - No control       01 - Non intersection      05 - Dusk   \n",
-       "4      10 - No control       01 - Non intersection  01 - Daylight   \n",
+       "2      10 - No control       01 - Non intersection      07 - Dark   \n",
+       "3  01 - Traffic signal        03 - At intersection  01 - Daylight   \n",
+       "4      10 - No control       01 - Non intersection      05 - Dusk   \n",
        "\n",
-       "  Collision_Classification                  Impact_type  Year     Month  \\\n",
-       "0        01 - Fatal injury               07 - SMV other  2014  February   \n",
-       "1        01 - Fatal injury                   02 - Angle  2014    August   \n",
-       "2        01 - Fatal injury        05 - Turning movement  2014      July   \n",
-       "3        01 - Fatal injury               07 - SMV other  2014    August   \n",
-       "4        01 - Fatal injury  06 - SMV unattended vehicle  2014     April   \n",
-       "\n",
-       "   Week_day  \n",
-       "0    Friday  \n",
-       "1  Saturday  \n",
-       "2   Tuesday  \n",
-       "3   Tuesday  \n",
-       "4  Saturday  "
+       "  Collision_Classification            Impact_type  Year     Month  Week_day  \n",
+       "0        01 - Fatal injury         07 - SMV other  2014  February    Friday  \n",
+       "1        01 - Fatal injury             02 - Angle  2014    August  Saturday  \n",
+       "2        01 - Fatal injury         07 - SMV other  2014      June    Friday  \n",
+       "3        01 - Fatal injury  05 - Turning movement  2014      July   Tuesday  \n",
+       "4        01 - Fatal injury         07 - SMV other  2014    August   Tuesday  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -289,16 +282,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(57768, 16)"
+       "(58338, 16)"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -310,7 +303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -318,24 +311,24 @@
      "output_type": "stream",
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 57768 entries, 0 to 57767\n",
+      "RangeIndex: 58338 entries, 0 to 58337\n",
       "Data columns (total 16 columns):\n",
-      "Record                      57768 non-null int64\n",
-      "Location                    57768 non-null object\n",
+      "Record                      58338 non-null int64\n",
+      "Location                    58338 non-null object\n",
       "X                           57768 non-null float64\n",
-      "Y                           57768 non-null float64\n",
-      "Date                        57768 non-null object\n",
-      "Time                        57768 non-null object\n",
-      "Environment                 57767 non-null object\n",
-      "Road_Surface                57768 non-null object\n",
-      "Traffic_Control             57733 non-null object\n",
-      "Collision_Location          57762 non-null object\n",
-      "Light                       57766 non-null object\n",
-      "Collision_Classification    57768 non-null object\n",
-      "Impact_type                 57768 non-null object\n",
-      "Year                        57768 non-null int64\n",
-      "Month                       57768 non-null object\n",
-      "Week_day                    57768 non-null object\n",
+      "Y                           58338 non-null float64\n",
+      "Date                        58338 non-null object\n",
+      "Time                        58338 non-null object\n",
+      "Environment                 58337 non-null object\n",
+      "Road_Surface                58338 non-null object\n",
+      "Traffic_Control             58302 non-null object\n",
+      "Collision_Location          58332 non-null object\n",
+      "Light                       58336 non-null object\n",
+      "Collision_Classification    58338 non-null object\n",
+      "Impact_type                 58338 non-null object\n",
+      "Year                        58338 non-null int64\n",
+      "Month                       58338 non-null object\n",
+      "Week_day                    58338 non-null object\n",
       "dtypes: float64(2), int64(2), object(12)\n",
       "memory usage: 7.1+ MB\n"
      ]
@@ -359,7 +352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -369,7 +362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -381,7 +374,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -400,25 +393,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "03 - P.D. only           46790\n",
-       "02 - Non-fatal injury    10885\n",
-       "01 - Fatal injury           93\n",
-       "Name: Collision_Classification, dtype: int64"
+       "03 - P.D. only           80.990092\n",
+       "02 - Non-fatal injury    18.840207\n",
+       "01 - Fatal injury         0.169701\n",
+       "Name: Collision_Classification, dtype: float64"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df.Collision_Classification.value_counts()"
+    "df.Collision_Classification.value_counts()/len(df)*100"
    ]
   },
   {
@@ -430,7 +423,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -440,7 +433,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -449,33 +442,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Non-fatal injury    57675\n",
-       "Fatal injury           93\n",
-       "Name: Collision_Classification, dtype: int64"
+       "Non-fatal injury    99.830299\n",
+       "Fatal injury         0.169701\n",
+       "Name: Collision_Classification, dtype: float64"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df.Collision_Classification.value_counts()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#df.groupby(['Collision_Classification', 'Environment'])['Collision_Classification'].aggregate('count').unstack()"
+    "df.Collision_Classification.value_counts()/len(df)*100"
    ]
   },
   {
@@ -487,7 +471,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -503,7 +487,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -513,15 +497,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Training set size: (40437, 11) (40437,)\n",
-      "Test set size: (17331, 11) (17331,)\n"
+      "Training set size: (40836, 11) (40836,)\n",
+      "Test set size: (17502, 11) (17502,)\n"
      ]
     }
    ],
@@ -541,12 +525,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "As we saw above, there are some attributes with missing values. We will now impute the missing values in those attributes for a better performance"
+    "As we saw above, there are some attributes with missing values. We will now impute the missing values in those attributes using mode for categorical variables and median for numerical variables"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -576,7 +560,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -604,15 +588,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Training set size after pre-processing: (40437, 78)\n",
-      "Test set size after pre-processing: (17331, 78)\n"
+      "Training set size after pre-processing: (40836, 78)\n",
+      "Test set size after pre-processing: (17502, 78)\n"
      ]
     }
    ],
@@ -630,7 +614,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -881,27 +865,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "?SMOTE"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Oversample the minority class\n",
-    "sm = SMOTE(ratio = 'minority', random_state = 42)\n",
+    "sm = SMOTE(ratio = None, sampling_strategy = 0.2, random_state = 42)\n",
     "X_train_scale_ovsm, y_train_ovsm = sm.fit_sample(X_train_prepared, y_train_label)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "SMOTE training data size: (80744, 78) (80744,)\n",
-      "Imbalanced training set class distribution: [40372    65]\n",
-      "SMOTE resampled training set class distribution: [40372 40372]\n"
+      "SMOTE training data size: (48920, 78) (48920,)\n",
+      "Imbalanced training set class distribution: [40767    69]\n",
+      "SMOTE resampled training set class distribution: [40767  8153]\n"
      ]
     }
    ],
@@ -920,7 +913,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -928,22 +921,22 @@
      "output_type": "stream",
      "text": [
       "****************************************************************************\n",
-      "Cross-validation accuracy (std): 0.998910 (0.001870)\n",
-      "AUROC: 0.999727\n",
-      "AUPRC: 0.999727\n",
+      "Cross-validation accuracy (std): 0.998263 (0.002916)\n",
+      "AUROC: 0.998281\n",
+      "AUPRC: 0.997038\n",
       "Predicted classes: [0 1]\n",
       "Confusion matrix:\n",
-      " [[40369     3]\n",
-      " [   85 40287]]\n",
+      " [[40764     3]\n",
+      " [   82  8071]]\n",
       "Classification report:\n",
       "               precision    recall  f1-score   support\n",
       "\n",
-      "           0       1.00      1.00      1.00     40372\n",
-      "           1       1.00      1.00      1.00     40372\n",
+      "           0       1.00      1.00      1.00     40767\n",
+      "           1       1.00      0.99      0.99      8153\n",
       "\n",
-      "    accuracy                           1.00     80744\n",
-      "   macro avg       1.00      1.00      1.00     80744\n",
-      "weighted avg       1.00      1.00      1.00     80744\n",
+      "    accuracy                           1.00     48920\n",
+      "   macro avg       1.00      0.99      1.00     48920\n",
+      "weighted avg       1.00      1.00      1.00     48920\n",
       "\n",
       "****************************************************************************\n"
      ]
@@ -1110,22 +1103,22 @@
      "output_type": "stream",
      "text": [
       "****************************************************************************\n",
-      "Test accuracy:  0.998327\n",
-      "AUROC: 0.509513\n",
-      "AUPRC: 0.001682\n",
+      "Test accuracy:  0.998172\n",
+      "AUROC: 0.523385\n",
+      "AUPRC: 0.002977\n",
       "Predicted classes: [0 1]\n",
       "Confusion matrix:\n",
-      " [[17302     1]\n",
-      " [   28     0]]\n",
+      " [[17470     2]\n",
+      " [   30     0]]\n",
       "Classification report:\n",
       "               precision    recall  f1-score   support\n",
       "\n",
-      "           0       1.00      1.00      1.00     17303\n",
-      "           1       0.00      0.00      0.00        28\n",
+      "           0       1.00      1.00      1.00     17472\n",
+      "           1       0.00      0.00      0.00        30\n",
       "\n",
-      "    accuracy                           1.00     17331\n",
-      "   macro avg       0.50      0.50      0.50     17331\n",
-      "weighted avg       1.00      1.00      1.00     17331\n",
+      "    accuracy                           1.00     17502\n",
+      "   macro avg       0.50      0.50      0.50     17502\n",
+      "weighted avg       1.00      1.00      1.00     17502\n",
       "\n",
       "****************************************************************************\n"
      ]
